[package]
name = "app_zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
env_logger = "0.10.0"
http = "0.2.9"
json = "0.12.4"
log = { version = "0.4.19", features = ["std", "serde", "max_level_debug", "max_level_error", "release_max_level_error", "max_level_info", "max_level_off", "release_max_level_info", "release_max_level_off", "max_level_warn", "max_level_trace", "release_max_level_warn", "release_max_level_trace"] }
log4rs = { version = "1.2.0", features = ["json_format", "toml_format", "toml"] }
serde = { version = "1.0.183", features = ["serde_derive", "derive"] }
serde_json = "1.0.104"
serde_with = { version = "3.2.0", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
